--- a/index.html
+++ b/index.html
@@ -496,8 +496,11 @@
                     document.addEventListener(Runner.events.KEYUP, this);
                     if (IS_MOBILE) {
                         // Mobile only touch devices.
-                        this.touchController.addEventListener(Runner.events.TOUCHSTART, this);
-                        this.touchController.addEventListener(Runner.events.TOUCHEND, this);
+                        // this.touchController.addEventListener(Runner.events.TOUCHSTART, this);
+                        // this.touchController.addEventListener(Runner.events.TOUCHEND, this);
+                        // this.containerEl.addEventListener(Runner.events.TOUCHSTART, this);
+                        document.body.addEventListener(Runner.events.TOUCHSTART, this);
+                        document.body.addEventListener(Runner.events.TOUCHEND, this);
                         this.containerEl.addEventListener(Runner.events.TOUCHSTART, this);
                     } else {
                         // Mouse.
@@ -512,9 +515,11 @@
                     document.removeEventListener(Runner.events.KEYDOWN, this);
                     document.removeEventListener(Runner.events.KEYUP, this);
                     if (IS_MOBILE) {
-                        this.touchController.removeEventListener(Runner.events.TOUCHSTART, this);
-                        this.touchController.removeEventListener(Runner.events.TOUCHEND, this);
+                        // this.touchController.removeEventListener(Runner.events.TOUCHSTART, this);
+                        // this.touchController.removeEventListener(Runner.events.TOUCHEND, this);
                         this.containerEl.removeEventListener(Runner.events.TOUCHSTART, this);
+                        document.body.removeEventListener(Runner.events.TOUCHSTART, this);
+                        document.body.removeEventListener(Runner.events.TOUCHEND, this);
                     } else {
                         document.removeEventListener(Runner.events.MOUSEDOWN, this);
                         document.removeEventListener(Runner.events.MOUSEUP, this);
